openmediavault (0.5.0.18) stable; urgency=low

  * Display a information dialog after the RAID has been created.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Jul 2013 21:47:13 +0200

openmediavault (0.5.0.17) stable; urgency=low

  * Various improvements and bugfixes.
  * Recreate SSL certificates during postinst.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Jul 2013 01:04:39 +0200

openmediavault (0.5.0.16) stable; urgency=low

  * Update locales.
  * Various improvements.
  * Fix CRC32 issue in RPC socket communication.
  * Add ability to enable/disable scheduled S.M.A.R.T. tests.
  * Add ability to initiate a S.M.A.R.T. test via WebGUI.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 06 Jul 2013 22:22:18 +0200

openmediavault (0.5.0.15) stable; urgency=low

  * Update locales.
  * Mantis 0000787: Display more SSH informations.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 Jul 2013 19:42:32 +0200

openmediavault (0.5.0.14) stable; urgency=low

  * Various improvements and bugfixes.
  * Modify fstab script to write special fstab entries at the end.
  * Add option to disable Monit notifications when a filesystem gets low.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 26 Jun 2013 10:42:31 +0200

openmediavault (0.5.0.13) stable; urgency=low

  * Fix bug in OMV.Rpc.
  * Various improvements and bugfixes.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 22 Jun 2013 13:21:16 +0200

openmediavault (0.5.0.12) stable; urgency=low

  * Fix global environment variable issue.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 22 Jun 2013 11:35:06 +0200

openmediavault (0.5.0.11) stable; urgency=low

  * Update locales.
  * Set the setgid bit on shared folders.
  * Improve error handling in OMV.window.Execute dialog.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Jun 2013 17:40:08 +0200

openmediavault (0.5.0.10) stable; urgency=low
