@@ -116,6 +116,24 @@ class OMVModuleNfs extends OMVModuleServiceAbstract
 	}
 
 	/**
+	 * Helper function to find out whether the given shared folder
+	 * configuration object is used. If it is used, then mark the
+	 * module as dirty.
+	 * @param type The event message type.
+	 * @param path The event message path.
+	 * @param object The configuration object.
+	 */
+	final public function hasSharedFolder($type, $path, $object) {
+		global $xmlConfig;
+		$xpath = sprintf("//services/nfs/shares/share[sharedfolderref='%s']",
+		  $object['uuid']);
+		if(TRUE === $xmlConfig->exists($xpath)) {
+			$this->setDirty();
+			$this->setDirtyByName("fstab");
+		}
+	}
+
+	/**
 	 * Bind listeners.
 	 */
 	function bindListeners(OMVNotifyDispatcher $dispatcher) {
@@ -127,6 +145,10 @@ class OMVModuleNfs extends OMVModuleServiceAbstract
 		  OMV_NOTIFY_CREATE | OMV_NOTIFY_MODIFY | OMV_NOTIFY_DELETE,
 		  "org.openmediavault.services.nfs.shares.share",
 		  array($this, "setDirty"));
+		$dispatcher->addListener(
+		  OMV_NOTIFY_MODIFY,
+		  "org.openmediavault.system.shares.sharedfolder",
+		  array($this, "hasSharedFolder"));
 		$moduleMgr = &OMVModuleMgr::getInstance();
 		$dispatcher->addListener(
 		  OMV_NOTIFY_MODIFY,
