@@ -123,9 +123,12 @@ class OMVModuleSamba extends OMVModuleServiceAbstract
 
 	/**
 	 * Add an user.
+	 * @param type The event message type.
+	 * @param path The event message path.
+	 * @param object The configuration object.
 	 * @throw E_EXEC_FAILED
 	 */
-	final public function addUser($object) {
+	final public function addUser($type, $path, $object) {
 //		$this->debug(var_export(func_get_args(), TRUE));
 		// Skip user if it is listed on the ignore list.
 		if(in_array($object['name'], $this->invalidUsers))
@@ -142,9 +145,12 @@ class OMVModuleSamba extends OMVModuleServiceAbstract
 
 	/**
 	 * Modify an user.
+	 * @param type The event message type.
+	 * @param path The event message path.
+	 * @param object The configuration object.
 	 * @throw E_EXEC_FAILED
 	 */
-	final public function modifyUser($object) {
+	final public function modifyUser($type, $path, $object) {
 //		$this->debug(var_export(func_get_args(), TRUE));
 		// Skip user if it is listed on the ignore list.
 		if(in_array($object['name'], $this->invalidUsers))
@@ -174,9 +180,12 @@ class OMVModuleSamba extends OMVModuleServiceAbstract
 
 	/**
 	 * Delete an user.
+	 * @param type The event message type.
+	 * @param path The event message path.
+	 * @param object The configuration object.
 	 * @throw E_EXEC_FAILED
 	 */
-	final public function deleteUser($object) {
+	final public function deleteUser($type, $path, $object) {
 //		$this->debug(var_export(func_get_args(), TRUE));
 		// Skip user if it is listed on the ignore list.
 		if(in_array($object['name'], $this->invalidUsers))
@@ -205,6 +214,22 @@ class OMVModuleSamba extends OMVModuleServiceAbstract
 	}
 
 	/**
+	 * Helper function to find out whether the given shared folder
+	 * configuration object is used. If it is used, then mark the
+	 * module as dirty.
+	 * @param type The event message type.
+	 * @param path The event message path.
+	 * @param object The configuration object.
+	 */
+	final public function hasSharedFolder($type, $path, $object) {
+		global $xmlConfig;
+		$xpath = sprintf("//services/smb/shares/share[sharedfolderref='%s']",
+		  $object['uuid']);
+		if(TRUE === $xmlConfig->exists($xpath))
+			$this->setDirty();
+	}
+
+	/**
 	 * Bind listeners.
 	 */
 	function bindListeners(OMVNotifyDispatcher $dispatcher) {
@@ -218,8 +243,12 @@ class OMVModuleSamba extends OMVModuleServiceAbstract
 		  array($this, "setDirty"));
 		$dispatcher->addListener(
 		  OMV_NOTIFY_MODIFY,
+		  "org.openmediavault.system.shares.sharedfolder",
+		  array($this, "hasSharedFolder"));
+		$dispatcher->addListener(
+		  OMV_NOTIFY_MODIFY,
 		  "org.openmediavault.system.shares.sharedfolder.privileges",
-		  array($this, "setDirty"));
+		  array($this, "hasSharedFolder"));
 		$dispatcher->addListener(
 		  OMV_NOTIFY_CREATE,
 		  "org.openmediavault.system.usermanagement.users.user",
